--- a/demo/css/header.css
+++ b/demo/css/header.css
@@ -15,6 +15,8 @@
 }
 
 @media screen and (min-width:1200px) {
+
+  /* 页面大于1200px */
   .nav {
     width: 95%;
     height: 80px;
@@ -109,12 +111,7 @@
     align-items: center;
   }
 
-  .nav-lan>span {
-    margin-right: 5px;
-  }
-
-
-  .nav-lan:hover>span>i {
+  .nav-lan:hover>div>i {
     transition-duration: 0.35s;
     transition-timing-function: ease-out;
     transform: rotate(180deg);
@@ -300,9 +297,14 @@
     color: #fff;
     text-decoration: none;
   }
+
+  /* 页面大于1200px */
 }
 
-@media screen and (max-width:1200px) and (min-width:760px) {
+
+@media screen and (max-width:1199.8px) and (min-width:760px) {
+
+  /* 页面1200px~760px */
   .nav {
     width: 90%;
     height: 80px;
@@ -388,23 +390,22 @@
   }
 
   .nav-lan {
+    height: 100%;
     display: flex;
     align-items: center;
   }
-
-  .nav-lan>span {
-    margin-right: 5px;
+  .nav-lan div {
+    display: flex;
+    align-items: center;
   }
-
-
-  .nav-lan:hover>span>i {
+  .nav-lan:hover>div>i {
     transition-duration: 0.35s;
     transition-timing-function: ease-out;
     transform: rotate(180deg);
   }
 
   .nav-lan:hover {
-    text-decoration: underline;
+    /* text-decoration: underline; */
     color: #264989c5;
     cursor: pointer;
     transition-duration: 0.35s;
@@ -447,11 +448,6 @@
     transition: all .35s;
   }
 
-  .nav-search .icon {
-    margin: auto;
-    margin-top: 3.5px;
-  }
-
   .nav-search {
     transition-duration: 0.35s;
     transition-timing-function: ease-in;
@@ -463,7 +459,6 @@
   }
 
   .nav-search .search-click .search-off {
-    /* font-size: 19px; */
     display: none;
     opacity: 1;
   }
@@ -583,9 +578,13 @@
     color: #fff;
     text-decoration: none;
   }
+
+  /* 页面1200px~760px */
 }
 
-@media screen and (max-width:760px) {
+@media screen and (max-width:759.8px) {
+
+  /* 页面小于760 */
   .nav {
     width: 90%;
     height: 60px;
@@ -672,11 +671,11 @@
   }
 
   .nav-lan>span {
-    margin-right: 5px;
+    /* margin-right: 5px; */
   }
 
 
-  .nav-lan:hover>span>i {
+  .nav-lan:hover>div>i {
     transition-duration: 0.35s;
     transition-timing-function: ease-out;
     transform: rotate(180deg);
@@ -862,4 +861,6 @@
     color: #fff;
     text-decoration: none;
   }
+
+  /* 页面小于760 */
 }
