--- a/demo/css/index.css
+++ b/demo/css/index.css
@@ -91,6 +91,89 @@
     background-color: #fff;
   }
 
+  .work_ul {
+    list-style: none;
+    /* display: flex; */
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    margin-top: 20px;
+    padding-bottom: 20px;
+    /* clear: both; */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  
+  .work .work_ul li {
+    /* float: left; */
+    width: 33.33%;
+    position: relative;
+    overflow: hidden;
+    -webkit-transition: all .5s 0s ease-out;
+    -moz-transition: all .5s 0s ease-out;
+    transition: all .5s 0s ease-out;
+  }
+  
+  .work .work_ul li a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    -webkit-transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+    -moz-transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+    transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+    text-decoration: none;
+    color: #333;
+  }
+  
+  .work .work_ul li .img {
+    margin: 0;
+    line-height: 0;
+    overflow: hidden;
+    background-size: cover;
+  }
+  
+  .work .work_ul li .img img {
+    width: 100%;
+    height: auto;
+  }
+  
+  .work .work_ul li .detail_area {
+    padding: 4% 4%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+    -moz-transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+    transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+  }
+  
+  .work .work_ul li .detail_area .title {
+    margin: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  
+  .work .work_ul li:hover {
+    box-shadow: 0 0 22.5px rgba(0, 0, 0, 0.589);
+  }
+  
+  .work .work_ul li>a>p>img {
+    transform: scale(1);
+    transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+  }
+  
+  .work .work_ul li:hover>a>p>img {
+    transform: scale(1.1);
+    transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+  }
+  
+  .work .work_ul li:hover>a>div {
+    background-color: #264989;
+    color: #fff;
+  }
+
 }
 
 @media screen and (max-width:1200px) and (min-width:760px) {
@@ -184,6 +267,89 @@
     background-color: #fff;
   }
 
+  .work_ul {
+    list-style: none;
+    /* display: flex; */
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    margin-top: 20px;
+    padding-bottom: 20px;
+    /* clear: both; */
+    display: flex;
+    flex-direction: row;
+
+  }
+  
+  .work .work_ul li {
+    /* float: left; */
+    width: 33.33%;
+    position: relative;
+    overflow: hidden;
+    -webkit-transition: all .5s 0s ease-out;
+    -moz-transition: all .5s 0s ease-out;
+    transition: all .5s 0s ease-out;
+  }
+  
+  .work .work_ul li a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    -webkit-transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+    -moz-transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+    transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+    text-decoration: none;
+    color: #333;
+  }
+  
+  .work .work_ul li .img {
+    margin: 0;
+    line-height: 0;
+    overflow: hidden;
+    background-size: cover;
+  }
+  
+  .work .work_ul li .img img {
+    width: 100%;
+    height: auto;
+  }
+  
+  .work .work_ul li .detail_area {
+    padding: 4% 4%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+    -moz-transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+    transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+  }
+  
+  .work .work_ul li .detail_area .title {
+    margin: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  
+  .work .work_ul li:hover {
+    box-shadow: 0 0 22.5px rgba(0, 0, 0, 0.589);
+  }
+  
+  .work .work_ul li>a>p>img {
+    transform: scale(1);
+    transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+  }
+  
+  .work .work_ul li:hover>a>p>img {
+    transform: scale(1.1);
+    transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+  }
+  
+  .work .work_ul li:hover>a>div {
+    background-color: #264989;
+    color: #fff;
+  }
+
 }
 
 @media screen and (max-width:760px) {
@@ -274,6 +440,91 @@
     border-radius: 0.45rem;
     padding: 4rem 7.5%;
     background-color: #fff;
+  }
+
+  .work_ul {
+    list-style: none;
+    /* display: flex; */
+    flex-wrap: wrap;
+    margin: 10px;
+    padding: 0;
+    margin-top: 20px;
+    padding-bottom: 20px;
+    /* clear: both; */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .work .work_ul li {
+    /* float: left; */
+    width: 230px;
+    margin: 10px;
+    position: relative;
+    overflow: hidden;
+    -webkit-transition: all .5s 0s ease-out;
+    -moz-transition: all .5s 0s ease-out;
+    transition: all .5s 0s ease-out;
+  }
+  
+  .work .work_ul li a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    -webkit-transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+    -moz-transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+    transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+    text-decoration: none;
+    color: #333;
+  }
+  
+  .work .work_ul li .img {
+    margin: 0;
+    line-height: 0;
+    overflow: hidden;
+    background-size: cover;
+  }
+  
+  .work .work_ul li .img img {
+    width: 100%;
+    height: auto;
+  }
+  
+  .work .work_ul li .detail_area {
+    padding: 4% 4%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+    -moz-transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+    transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+  }
+  
+  .work .work_ul li .detail_area .title {
+    margin: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  
+  .work .work_ul li:hover {
+    box-shadow: 0 0 22.5px rgba(0, 0, 0, 0.589);
+  }
+  
+  .work .work_ul li>a>p>img {
+    transform: scale(1);
+    transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+  }
+  
+  .work .work_ul li:hover>a>p>img {
+    transform: scale(1.1);
+    transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+  }
+  
+  .work .work_ul li:hover>a>div {
+    background-color: #264989;
+    color: #fff;
   }
 }
 
@@ -493,89 +744,6 @@
   width: 100%;
   margin-top: 40px;
   margin-bottom: 60px;
-}
-
-.work_ul {
-  list-style: none;
-  /* display: flex; */
-  flex-wrap: wrap;
-  margin: 0;
-  padding: 0;
-  margin-top: 20px;
-  padding-bottom: 20px;
-  /* clear: both; */
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.work .work_ul li {
-  /* float: left; */
-  width: 33.33%;
-  position: relative;
-  overflow: hidden;
-  -webkit-transition: all .5s 0s ease-out;
-  -moz-transition: all .5s 0s ease-out;
-  transition: all .5s 0s ease-out;
-}
-
-.work .work_ul li a {
-  display: block;
-  width: 100%;
-  height: 100%;
-  -webkit-transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
-  -moz-transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
-  transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
-  text-decoration: none;
-  color: #333;
-}
-
-.work .work_ul li .img {
-  margin: 0;
-  line-height: 0;
-  overflow: hidden;
-  background-size: cover;
-}
-
-.work .work_ul li .img img {
-  width: 100%;
-  height: auto;
-}
-
-.work .work_ul li .detail_area {
-  padding: 4% 4%;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
-  -moz-transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
-  transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
-}
-
-.work .work_ul li .detail_area .title {
-  margin: 0;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.work .work_ul li:hover {
-  box-shadow: 0 0 22.5px rgba(0, 0, 0, 0.589);
-}
-
-.work .work_ul li>a>p>img {
-  transform: scale(1);
-  transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
-}
-
-.work .work_ul li:hover>a>p>img {
-  transform: scale(1.1);
-  transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
-}
-
-.work .work_ul li:hover>a>div {
-  background-color: #264989;
-  color: #fff;
 }
 
 /* .line .line-inner .line-txt:nth-child(1) a {
